feat: implement localStorage persistence for filter and sort state in LeadsList component

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -67,7 +67,8 @@
     "email": "Email",
     "source": "Source",
     "score": "Score",
-    "status": "Status"
+    "status": "Status",
+    "clearFilters": "Clear Filters"
   },
   "opportunitiesList": {
     "title": "Opportunities",
